--- a/html_enp/sitio_de_interes_cientifico/C-33_barranco_del_draguillo.html
+++ b/html_enp/sitio_de_interes_cientifico/C-33_barranco_del_draguillo.html
@@ -7312,6 +7312,7 @@ a.anchor-link {
                     processEnvironments: true
                 },
                 displayAlign: 'center',
+                messageStyle: 'none',
                 CommonHTML: {
                     linebreaks: {
                     automatic: true
@@ -7509,17 +7510,7 @@ a.anchor-link {
 </style>
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
-<main>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="INVENTARIO-DE-ESPECIES-ENCONTRADAS-EN-LOS-ESPACIOS-NATURALES-PROTEGIDOS-(ENP)-ISLA-GRAN-CANARIA.">INVENTARIO DE ESPECIES ENCONTRADAS EN LOS ESPACIOS NATURALES PROTEGIDOS (ENP) ISLA GRAN CANARIA.<a class="anchor-link" href="#INVENTARIO-DE-ESPECIES-ENCONTRADAS-EN-LOS-ESPACIOS-NATURALES-PROTEGIDOS-(ENP)-ISLA-GRAN-CANARIA.">¶</a></h1>
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput">
+<main><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput">
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput">
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput">
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput">
@@ -7532,61 +7523,61 @@ a.anchor-link {
 <div class="jp-OutputArea jp-Cell-outputArea">
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
-<div id="uxlimdxagc" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="zuvrxggwor" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>
-#uxlimdxagc table {
+#zuvrxggwor table {
           font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
           -webkit-font-smoothing: antialiased;
           -moz-osx-font-smoothing: grayscale;
         }
 
-#uxlimdxagc thead, tbody, tfoot, tr, td, th { border-style: none; }
+#zuvrxggwor thead, tbody, tfoot, tr, td, th { border-style: none; }
  tr { background-color: transparent; }
-#uxlimdxagc p { margin: 0; padding: 0; }
- #uxlimdxagc .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: black; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
- #uxlimdxagc .gt_caption { padding-top: 4px; padding-bottom: 4px; }
- #uxlimdxagc .gt_title { color: #333333; font-size: 125%; font-weight: initial; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
- #uxlimdxagc .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 3px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
- #uxlimdxagc .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
- #uxlimdxagc .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
- #uxlimdxagc .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
- #uxlimdxagc .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
- #uxlimdxagc .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
- #uxlimdxagc .gt_column_spanner_outer:first-child { padding-left: 0; }
- #uxlimdxagc .gt_column_spanner_outer:last-child { padding-right: 0; }
- #uxlimdxagc .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; overflow-x: hidden; display: inline-block; width: 100%; }
- #uxlimdxagc .gt_spanner_row { border-bottom-style: hidden; }
- #uxlimdxagc .gt_group_heading { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 2px; border-top-color: #0076BA; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #0076BA; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: middle; text-align: left; }
- #uxlimdxagc .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; border-top-style: solid; border-top-width: 2px; border-top-color: #0076BA; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #0076BA; vertical-align: middle; }
- #uxlimdxagc .gt_from_md> :first-child { margin-top: 0; }
- #uxlimdxagc .gt_from_md> :last-child { margin-bottom: 0; }
- #uxlimdxagc .gt_row { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #89D3FE; border-left-style: none; border-left-width: 1px; border-left-color: #89D3FE; border-right-style: none; border-right-width: 1px; border-right-color: #89D3FE; vertical-align: middle; overflow-x: hidden; }
- #uxlimdxagc .gt_stub { color: #FFFFFF; background-color: #0076BA; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #0076BA; padding-left: 5px; padding-right: 5px; }
- #uxlimdxagc .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
- #uxlimdxagc .gt_row_group_first td { border-top-width: 2px; }
- #uxlimdxagc .gt_row_group_first th { border-top-width: 2px; }
- #uxlimdxagc .gt_striped { background-color: #F4F4F4; }
- #uxlimdxagc .gt_table_body { border-top-style: solid; border-top-width: 2px; border-top-color: #0076BA; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
- #uxlimdxagc .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
- #uxlimdxagc .gt_sourcenote { font-size: 90%; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
- #uxlimdxagc .gt_left { text-align: left; }
- #uxlimdxagc .gt_center { text-align: center; }
- #uxlimdxagc .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
- #uxlimdxagc .gt_font_normal { font-weight: normal; }
- #uxlimdxagc .gt_font_bold { font-weight: bold; }
- #uxlimdxagc .gt_font_italic { font-style: italic; }
- #uxlimdxagc .gt_super { font-size: 65%; }
- #uxlimdxagc .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
- #uxlimdxagc .gt_asterisk { font-size: 100%; vertical-align: 0; }
+#zuvrxggwor p { margin: 0; padding: 0; }
+ #zuvrxggwor .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: black; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
+ #zuvrxggwor .gt_caption { padding-top: 4px; padding-bottom: 4px; }
+ #zuvrxggwor .gt_title { color: #333333; font-size: 125%; font-weight: initial; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
+ #zuvrxggwor .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 3px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
+ #zuvrxggwor .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
+ #zuvrxggwor .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
+ #zuvrxggwor .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
+ #zuvrxggwor .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
+ #zuvrxggwor .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
+ #zuvrxggwor .gt_column_spanner_outer:first-child { padding-left: 0; }
+ #zuvrxggwor .gt_column_spanner_outer:last-child { padding-right: 0; }
+ #zuvrxggwor .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; overflow-x: hidden; display: inline-block; width: 100%; }
+ #zuvrxggwor .gt_spanner_row { border-bottom-style: hidden; }
+ #zuvrxggwor .gt_group_heading { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 2px; border-top-color: #0076BA; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #0076BA; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: middle; text-align: left; }
+ #zuvrxggwor .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; border-top-style: solid; border-top-width: 2px; border-top-color: #0076BA; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #0076BA; vertical-align: middle; }
+ #zuvrxggwor .gt_from_md> :first-child { margin-top: 0; }
+ #zuvrxggwor .gt_from_md> :last-child { margin-bottom: 0; }
+ #zuvrxggwor .gt_row { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #89D3FE; border-left-style: none; border-left-width: 1px; border-left-color: #89D3FE; border-right-style: none; border-right-width: 1px; border-right-color: #89D3FE; vertical-align: middle; overflow-x: hidden; }
+ #zuvrxggwor .gt_stub { color: #FFFFFF; background-color: #0076BA; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #0076BA; padding-left: 5px; padding-right: 5px; }
+ #zuvrxggwor .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
+ #zuvrxggwor .gt_row_group_first td { border-top-width: 2px; }
+ #zuvrxggwor .gt_row_group_first th { border-top-width: 2px; }
+ #zuvrxggwor .gt_striped { background-color: #F4F4F4; }
+ #zuvrxggwor .gt_table_body { border-top-style: solid; border-top-width: 2px; border-top-color: #0076BA; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
+ #zuvrxggwor .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
+ #zuvrxggwor .gt_sourcenote { font-size: 90%; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
+ #zuvrxggwor .gt_left { text-align: left; }
+ #zuvrxggwor .gt_center { text-align: center; }
+ #zuvrxggwor .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
+ #zuvrxggwor .gt_font_normal { font-weight: normal; }
+ #zuvrxggwor .gt_font_bold { font-weight: bold; }
+ #zuvrxggwor .gt_font_italic { font-style: italic; }
+ #zuvrxggwor .gt_super { font-size: 65%; }
+ #zuvrxggwor .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
+ #zuvrxggwor .gt_asterisk { font-size: 100%; vertical-align: 0; }
  
 </style>
 <table class="gt_table" data-quarto-bootstrap="false" data-quarto-disable-processing="false">
 <thead>
 <tr class="gt_heading">
-<td class="gt_heading gt_title gt_font_normal" colspan="6"><strong>INVENTARIO DE ESPECIES DEL ENP C-33 BARRANCO DEL DRAGUILLO</strong></td>
+<td class="gt_heading gt_title gt_font_normal" colspan="6"><strong>INVENTARIO DE ESPECIES DEL ESPACIO NATURAL PROTEGIDO (ENP) C-33 BARRANCO DEL DRAGUILLO, ISLA DE GRAN CANARIA</strong></td>
 </tr>
 <tr class="gt_heading">
-<td class="gt_heading gt_subtitle gt_font_normal gt_bottom_border" colspan="6">Categoría del ENP: <u>Sitio de Interés Científico<a rel="noreferrer" target="_blank"> <img alt="logoenp" height="30" src="https://www.gobiernodecanarias.org/cmsgob1/export/sites/planificacionterritorial/galeria/imagenes_enp/SIC.jpg" width="30"/> </a></u></td>
+<td class="gt_heading gt_subtitle gt_font_normal gt_bottom_border" colspan="6">Categoría del ENP: <u>Sitio de Interés Científico<a rel="noreferrer" target="_blank"> <img alt="logoenp" height="30" src="https://www.gobiernodecanarias.org/cmsgob1/export/sites/planificacionterritorial/galeria/imagenes_enp/SIC.jpg" width="30"/> </a></u><br/><i>Número de especies en total del ENP = <strong>0</strong><i></i></i></td>
 </tr>
 <tr class="gt_col_headings">
 <th class="gt_col_heading gt_columns_bottom_border gt_right" colspan="1" id="&lt;strong&gt;ID Biota&lt;/strong&gt;" rowspan="1" scope="col"><strong>ID Biota</strong></th>
@@ -7612,7 +7603,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <footer style="text-align: left; margin-top: 20px; font-size: small; color: gray;">
-<p>Sitio desarrollado por <a href="https://juancarlosbio.github.io/juancarlos_portfolio_esp/">Juan Carlos García Estupiñán</a> mediante la MIT LICENSE</p>
+<p>Sitio <a href="https://github.com/JuanCarlosBio/inventario_especies_enp">desarrollado</a> por <a href="https://juancarlosbio.github.io/juancarlos_portfolio_esp/">Juan Carlos García Estupiñán</a> mediante la MIT LICENSE</p>
 </footer>
 </div>
 </div>
